--- a/pwindex.html
+++ b/pwindex.html
@@ -5,9 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Send+Flowers&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="pwstyle.css">
 </head>
 <body>
-    <h1>Sawvik Kar Dipto</h1>
-    <h2>Sawvik Kar Dipto</h2>
+    <div class="first">
+    <div class="a">
+        <p class="start">Hello I'm</p>
+        <section class="name">Sawvik Kar Dipto</section>
+        <p class="text">You might not know me, but trust me ,I am not so bad guy. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis nulla rem dolorem eum magnam quis a nisi voluptate! Molestiae, perspiciatis.</p><br>
+        <p class="t"><a class="o" target="_blank" href="https://sawvikk.github.io/web_portfolio/index.html">Click here</a> </p>   
+    </div>
+    <div class="b">
+        <img src="personal-Images/image 1-2.png" alt="my photo">
+    </div></div>
+    <div class="second">
+        <div class="b">
+            <img src="personal-Images/image 10.png" alt="my photo">
+        </div>
+        <div class="a">
+            <p class="start">Biography</p>
+            
+            <p class="text2">You might not know me, but trust me ,I am not so bad guy. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis nulla rem dolorem eum magnam quis a nisi voluptate! Molestiae, perspiciatis.</p><br>
+            <p ><a class="oo" target="_blank" href="https://sawvikk.github.io/web_portfolio/index.html">Click here</a> </p>   
+        </div>
+        </div>
+        <div class="third">
+            <p>My Latest Work</p>
+            <div class="ab1">
+                <img src="personal-Images/latest-work/work-1.png" alt="">
+            </div>
+            <div class="ab2">
+                <img src="personal-Images/latest-work/work-2.jpg" alt="">
+            </div>
+            <div class="ab3">
+                <img src="personal-Images/latest-work/work-3.jpg" alt="">
+            </div>
+        </div>
+        <div class="fourth">
+           <h1>What Clients are saying</h1>
+            <p class="name1">Bruce Mocchi </p>
+            <br>
+            <p class="dsg">Founder and CEO of Alies</p>
+            <br><br><p class="cmnt">
+                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci vitae quae? Alias aperiam ex blanditiis, rem maxime, in deleniti quam eaque soluta nihil fugiat? Distinctio consectetur eos voluptas adipisci.""
+            </p>
+            <p class="msg">Leave a message in the 
+            <br><br><a href="sawvik.dipto10@gmail.com">sawvik.dipto10@gmail.com</a></p>
+            <p class="f">Programming Hero initative . c 2020 ALL rights reserved</p>
+        </div>
+        
+
 </body>
 </html>
